# recettes

./: .env.exemple  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  railway.json  requirements.txt  vercel.json
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_passwordresettoken.py  0004_user_is_ban.py  0005_alter_passwordresettoken_user.py  0007_user_profile_picture.py  0009_alter_user_profile_picture.py  0011_user_tiktok_handle.py
account/templates/: article_detail.html  auth_core.html  authors.html  change_password.html  form.html  form_login.html  form_register.html  include_pass_forgot.html  include_register.html  new_article.html  password_success.html  profile.html  recipe_user_list.html  register.html  user_articles.html
account/templatetags/: my_filters.py
account/tests/: test_login.py  test_register.py  (+1 more)
app/: Dockerfile  Dockerfile.dev  Pockerfile  manage.py  pyproject.toml  railway.json  requirements.txt
article/: admin.py  forms.py  models.py  urls.py
common/: admin.py  models.py  urls.py  views.py
elisasrecipe/: settings.py  urls.py  views.py  wsgi.py
playwright_tests/: 01-account_basic_test.py  01a-delete_account_test.py  02-create_recipe_test.py  02-recipe_test.py  02b-edit_recipe_test.py  03-articles_test.py  04-comment_test.py  05-report_test.py  test_create_recipe.py  test_register_login_logout.py
recipe/: admin.py  forms.py  models.py  urls.py  views.py
tools/: b2_client.py  translate.py
(+328 files in other folders)
