[tool.poetry]
name = "Recettes"
version = "0.0.8"
description = "Scoial network to create recipes"
authors = ["peko <ymepa@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
boto3 = "^1.33.10"
django-htmx = "^1.17.2"
django-quill-editor = "^0.1.40"
django-tailwind = "^3.6.0"
django-storages = "^1.14.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
playwright = "^1.40.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
